<resources>
    <string name="app_name">Class Registration Waiting List</string>
    <string name="action_settings">Settings</string>
    <string name="activity_title_home">Class Registration Waiting List</string>
    <string name="msg_no_courses">No courses!</string>
    <string name="msg_no_res">Nobody on the waiting list!</string>
    <string name="lbl_new_course_title">Add a Course</string>
    <string name="lbl_new_student_title">Add a Student to Course Waiting List</string>
    <string name="lbl_edit_course_title">Edit Course</string>
    <string name="lbl_edit_student_title">Edit Student</string>
    <string name="hint_sName">Student Name</string>
    <string name="hint_sID">Student ID</string>
    <string name="hint_sYear">Expected Graduation Year</string>
    <string name="undergrad">Undergrad</string>
    <string name="graduate">Grad Student</string>

    <string name="hint_cName">Course Name (eg. Java Programming)</string>
    <string name="hint_cID">Course Number (eg. CSIT-201)</string>
    <string name="title_activity_student">studentActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>